crates/sniff-test/tests/snapshots/fixtures__dependency_obligation.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "documented-panic",
    "level": "warn",
    "owner": {
      "crate": "dependency_app",
      "package-name": "dependency-app",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `dependency_obligation::documented` with a `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "dependency_app::call_dependency",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:35",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:2:5: 2:44",
    "target": "dependency_obligation::documented",
    "trace": [
      "src/lib.rs:2:5: 2:44: dependency_app::call_dependency --direct-call-> dependency_obligation::documented"
    ]
  }
]
