crates/sniff-test/tests/snapshots/fixtures__dependency_obligation_relative_cache.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "dependency_app"
    },
    "dependencies": [
      {
        "artifact-id": "[ARTIFACT_ID]",
        "extern-name": "dependency_obligation"
      }
    ],
    "findings": [
      {
        "kind": "documented-panic",
        "level": "warn",
        "reason": "dependency_obligation::documented documents when it may panic under # Panics",
        "root": "dependency_app::call_dependency",
        "root-kind": "concrete",
        "span": "src/lib.rs:2:5: 2:44",
        "target": "dependency_obligation::documented",
        "trace": [
          "src/lib.rs:2:5: 2:44: dependency_app::call_dependency --direct-call-> dependency_obligation::documented"
        ]
      }
    ],
    "format-version": 6,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  },
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "dependency_obligation"
    },
    "dependencies": [],
    "findings": [],
    "format-version": 6,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "dependency",
    "tool-version": "0.1.0"
  }
]
