crates/sniff-test/tests/snapshots/fixtures__dependency_private_helper_trace.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "panic-invocation",
    "level": "deny",
    "owner": {
      "crate": "dependency_generic_private_panic",
      "package-name": "dependency-generic-private-panic",
      "package-version": "0.1.0",
      "scope": "dependency"
    },
    "reason": "dependency crate `dependency_generic_private_panic` has no recorded `// PANIC:` evidence for panic invocation to `core::panicking::panic_fmt`",
    "root": "dependency_generic_private_panic_app::caller",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:26",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "[FIXTURE]/dep/src/lib.rs:8:5: 8:67",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:2:5: 2:54: dependency_generic_private_panic_app::caller --direct-call-> dependency_generic_private_panic::api",
      "[FIXTURE]/dep/src/lib.rs:3:5: 3:17: dependency_generic_private_panic::api --direct-call-> dependency_generic_private_panic::hidden",
      "[FIXTURE]/dep/src/lib.rs:8:5: 8:67: dependency_generic_private_panic::hidden --macro-expansion-> macro core::macros::builtin::assert",
      "[FIXTURE]/dep/src/lib.rs:8:5: 8:67: macro core::macros::builtin::assert --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ]
  }
]
