crates/sniff-test/tests/snapshots/fixtures__dependency_returned_closure_bodies.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "panic-invocation",
    "level": "deny",
    "owner": {
      "crate": "dependency_closure_dep",
      "package-name": "dependency-closure-dep",
      "package-version": "0.1.0",
      "scope": "dependency"
    },
    "reason": "dependency crate `dependency_closure_dep` has no recorded `// PANIC:` evidence for panic invocation to `core::panicking::panic_fmt`",
    "root": "dependency_closure_app::returned",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:17:1: 17:49",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "[FIXTURE]/dep/src/lib.rs:42:9: 42:64",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:19:5: 19:14: dependency_closure_app::returned --direct-call-> dependency_closure_dep::make_consumer::{closure#0}",
      "[FIXTURE]/dep/src/lib.rs:42:9: 42:64: dependency_closure_dep::make_consumer::{closure#0} --macro-expansion-> macro core::macros::builtin::assert",
      "[FIXTURE]/dep/src/lib.rs:42:9: 42:64: macro core::macros::builtin::assert --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ]
  }
]
