crates/sniff-test/tests/snapshots/fixtures__dependency_safety.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "safety",
    "finding": "concrete-operation",
    "function": "dependency_safety::read_byte",
    "kind": "effect",
    "level": "deny",
    "operation": "raw-pointer-dereference",
    "owner": {
      "crate": "dependency_safety",
      "scope": "dependency"
    },
    "reason": "dependency crate `dependency_safety` has no recorded `// SAFETY:` justification for raw pointer dereference",
    "root": "dependency_safety_app::read_dependency",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:49",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "[FIXTURE]/dep/src/lib.rs:2:14: 2:22",
    "trace": [
      "src/lib.rs:2:5: 2:42: dependency_safety_app::read_dependency --direct-call-> dependency_safety::read_byte",
      "[FIXTURE]/dep/src/lib.rs:2:14: 2:22: dependency_safety::read_byte --effect-operation-> raw pointer dereference"
    ],
    "trace-id": "fb1c9dd3"
  },
  {
    "effect": "safety",
    "finding": "concrete-operation",
    "function": "dependency_safety::read_byte",
    "kind": "effect",
    "level": "deny",
    "operation": "raw-pointer-dereference",
    "owner": {
      "crate": "dependency_safety",
      "scope": "dependency"
    },
    "reason": "dependency crate `dependency_safety` has no recorded `// SAFETY:` justification for raw pointer dereference",
    "root": "dependency_safety_app::read_dependency_again",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:5:1: 5:55",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "[FIXTURE]/dep/src/lib.rs:2:14: 2:22",
    "trace": [
      "src/lib.rs:6:5: 6:42: dependency_safety_app::read_dependency_again --direct-call-> dependency_safety::read_byte",
      "[FIXTURE]/dep/src/lib.rs:2:14: 2:22: dependency_safety::read_byte --effect-operation-> raw pointer dereference"
    ],
    "trace-id": "4cdef8fd"
  },
  {
    "effect": "safety",
    "finding": "documented-obligation",
    "function": "dependency_safety::read_documented",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "dependency_safety",
      "scope": "dependency"
    },
    "reason": "dependency crate `dependency_safety` has no recorded `// SAFETY:` justification for call to `dependency_safety::documented_read` with a documented `# Safety` obligation",
    "root": "dependency_safety_app::read_documented_dependency",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:9:1: 9:60",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "[FIXTURE]/dep/src/lib.rs:14:14: 14:38",
    "target": "dependency_safety::documented_read",
    "trace": [
      "src/lib.rs:10:5: 10:48: dependency_safety_app::read_documented_dependency --direct-call-> dependency_safety::read_documented",
      "[FIXTURE]/dep/src/lib.rs:14:14: 14:38: dependency_safety::read_documented --direct-call-> dependency_safety::documented_read"
    ],
    "trace-id": "2ed4dea2"
  }
]
